First commited as before_60963_rev2